Ignore reports, screenshots, and dist_protected directories

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ parts/
 sdist/
 var/
 wheels/
+cache/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -46,8 +47,9 @@ ehthumbs.db
 Thumbs.db
 
 # Application specific
-reports/*.html
-screenshots/*.png
+reports/
+screenshots/
+dist_protected/
 static/charts/*.png
 static/charts/*.html
 logs/
